--- a/Course Description Word Count.ipynb
+++ b/Course Description Word Count.ipynb
@@ -281,7 +281,9 @@
     "f.close()\n",
     "\n",
     "stripChar = string.punctuation + string.digits + string.whitespace\n",
-    "colleges = ['Dietrich', 'MCS', 'SCS', 'CFA', 'CIT', 'Tepper', 'Heinz', 'Other']\n",
+    "colleges = ['Dietrich College of Social Sciences and Humanities', 'Mellon College of Science', 'School of Computer Science',\n",
+    "            'College of Fine Arts', 'Carnegie Institute of Technology', 'Tepper School of Business', 'Heinz College',\n",
+    "            'Other']\n",
     "Dietrich = ['36', '65', '66', '67', '73', '76', '79', '80', '82', '84',\n",
     "            '85', '88',]\n",
     "MCS = ['03', '09', '21', '33', '38']\n",
